--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@apollo/server": "^4.11.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
